--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>React test</title>
-  <link rel="stylesheet" href="dt.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 </html>
