updated cleaner code

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
 	<title>React test</title>
 </head>
 <body>
-  <div id="root"></div>
-  <div id="root2"></div>    
+  <div><span>text före ikonen</span><div id="root"></div> </div> 
   <script src="/dist/bundle.js"></script>
 </body>
 </html>
